--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 # Ignorar la carpeta "post" y todos sus contenidos
-assets/post/
+assets/post/big/
+assets/post/thumb/
+assets/post-temp/
+assets/alianzas/
+assets/directivos/
+assets/docentes/
+assets/novedades/
+assets/revistas/
+assets/slider/
+assets/socios/
